Added eco news formatter to Add Eco News modal in management panel (#4679).

--- a/core/src/main/resources/static/management/css/table_Modal_Pagination.css
+++ b/core/src/main/resources/static/management/css/table_Modal_Pagination.css
@@ -1206,10 +1206,16 @@ table.table .avatar {
     display: inline-block;
 }
 
-.modal .form-control {
+.modal {
     border-radius: 3px;
     box-shadow: none;
     border: 1px solid #878787;
+}
+
+.form-control {
+    border-radius: 3px;
+    box-shadow: none;
+    border: 1px solid #ced4da;
 }
 
 .form-search {
