--- a/core/src/main/resources/static/css/sidebar.css
+++ b/core/src/main/resources/static/css/sidebar.css
@@ -199,6 +199,23 @@ block:hover img{
     color: white;
 }
 
+button.close {
+    padding: 2rem 1rem !important;
+}
+
+button.close:active {
+    border: none !important;
+    outline: 0;
+}
+
+button.close:focus {
+    outline: 0;
+}
+
+.cb-tags {
+    accent-color: #13AA57
+}
+
 
 
 
